<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="lp_auto_check_interval">Set auto-check interval</string>
	<string name="lp_no_selected">no selected</string>
	<string name="cbp_auto_check">Enable/Disable auto-check</string>
	<string name="disable_auto_check">Auto-check disabled</string>
	<string name="enable_auto_check">Auto-check enabled</string>
	<string name="hint_check_now">checking thread is running background</string>
	<string name="notification_update_finish_title">Check finished</string>
	<string name="notification_no_update">No update found</string>
	<string name="notification_update_successfully">Update successfully. Reboot to take effect</string>
	<string name="notification_update_failed">Update failed. Try again later.</string>
	<string name="menu_about">About</string>
	<string name="about_title">About GoogleCheckinHelper</string>
	<string name="about_content">Version %s\nSupporting forum\nhttp://www.HiAPK.com
	</string>
	<string name="not_defined_hiap_rom">This application only compatible with HiApk ROM.
	</string>
	<string name="p_check_now_summary">Check hosts right now</string>
	<string name="p_check_now_title">Check hosts now</string>
	<string name="help_tip_1">Click the button below when you can not connect to
		Google Servers</string>
	<string name="help_btn_text">Try to Connect</string>
	<string name="help_tip_2">Make sure you have connected to Internet</string>
	<string name="help_settings">Settings</string>
	<string name="btnRebootNow">Reboot Now</string>
	<string name="btnRebootLater">Reboot Later</string>
	<string name="app_name">GoogleCheckinHelper</string>
	<string name="checkpopup_extra" translatable="false">checkpopup_extra
	</string>
	<string name="hiapkrom_sharepreference_name" translatable="false">HiapkRomSP
	</string>
	<string name="triggerTime_sharepreference_name" translatable="false">AppTriggerTimeSP
	</string>
	<string name="app_sharepreference_name" translatable="false">GoogleCheckinHelperSP
	</string>
	<string name="cmd_remount_system" translatable="false">mount -o
		rw,remount -t yaffs2 /dev/block/mtdblock3 /system</string>
	<string name="notification_id" translatable="false">Just a Id</string>
	<string name="key_cbp_auto_check" translatable="false">
		key_cbp_auto_check
	</string>
	<string name="key_lp_choseinterval" translatable="false">key_lp_choseinterval
	</string>
	<string name="key_p_checknow" translatable="false">key_p_checknow
	</string>
	<string name="alarm_interval_default" translatable="false">604800000
	</string>
	<string-array name="entry_alarm_interval">
		<item>once a day</item>
		<item>once a week</item>
		<item>once a month</item>
	</string-array>
	<string-array name="entriesVal_alarm_interval"
		translatable="false">
		<item>86400000</item>
		<item>@string/alarm_interval_default</item>
		<item>2592000000</item>
	</string-array>
	<string name="rollback_btn_text">Roll back</string>
	<string name="rollback_fail">Roll back fail</string>
	<string name="rollback_success">Roll back finished</string>
	<string name="rollback_not_need">noting to roll back</string>
	<string name="check_host_summary">when Google is unconnectable,just try it</string>
	<string name="check_host_title">Update host info</string>
	<string name="roll_back_title">Roll back host</string>
	<string name="roll_back_summary">Roll back your host to default values</string>
</resources>
