<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference android:key="check_host" android:title="@string/check_host_title"
		android:summary="@string/check_host_summary" />
	<Preference android:key="roll_back" android:title="@string/roll_back_title"
		android:summary="@string/roll_back_summary" />
	<CheckBoxPreference android:summaryOn="@string/enable_auto_check"
		android:defaultValue="True" android:summaryOff="@string/disable_auto_check"
		android:key="key_cbp_auto_check" android:title="@string/cbp_auto_check"
		android:persistent="true" />
	<ListPreference android:key="key_lp_choseinterval"
		android:dialogTitle="@string/lp_auto_check_interval" android:title="@string/lp_auto_check_interval"
		android:dependency="key_cbp_auto_check" android:entries="@array/entry_alarm_interval"
		android:entryValues="@array/entriesVal_alarm_interval"
		android:defaultValue="@string/alarm_interval_default"
		android:persistent="true" />
</PreferenceScreen>