<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:background="@android:drawable/title_bar"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<ImageView android:id="@+id/iv01" android:background="@drawable/icon"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</ImageView>
		<TextView android:id="@+id/tv01" android:text="@string/app_name"
			android:textSize="23sp" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:textColor="@android:color/white"
			android:gravity="center">
		</TextView>
	</LinearLayout>
	<TextView android:id="@+id/txtContent" android:gravity="center"
		android:textSize="20sp" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_margin="5dip">
	</TextView>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:padding="5dip" android:gravity="center">
		<Button android:id="@+id/btnOk" android:text="@android:string/ok"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_margin="10dip" android:visibility="gone"
			android:textSize="20sp" android:layout_weight="1">
		</Button>
		<Button android:id="@+id/btnRebootNow" android:text="@string/btnRebootNow"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_margin="10dip" android:visibility="gone"
			android:textSize="20sp" android:layout_weight="1">
		</Button>
		<Button android:id="@+id/btnRebootLater" android:text="@string/btnRebootLater"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_margin="10dip" android:visibility="gone"
			android:textSize="20sp" android:layout_weight="1">
		</Button>
	</LinearLayout>
</LinearLayout>
